Transfer List Overflow Fix

--- a/private/css/dynamicTable.sass
+++ b/private/css/dynamicTable.sass
@@ -8,6 +8,7 @@
 
 #transferList 
 	padding-left: 2px
+	overflow: hidden !important
 	tr:hover
 		cursor: pointer
 	img.stateIcon
